--- a/RentPrediction.ipynb
+++ b/RentPrediction.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "42ad76fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1 CLEAN DATA\n",
+    "#2 EDA\n",
+    "#3 CONVERT SET (SOMETIMES OPTIONAL)\n",
+    "#4 SPLIT DATA (DEPENDS)\n",
+    "#5 SELECT MODEL\n",
+    "#6 SELECT HYPERPARAMETERS\n",
+    "#7 COMPOSE INTO PIPELINE/S\n",
+    "#8 SELECT METRICS\n",
+    "#9 EVALUATE SCORE\n",
+    "#10 TUNE HYPERPARAMETERS / CHANGE MODEL\n",
+    "#11 EVALUATE SCORE"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "b1f3d691",
    "metadata": {},
@@ -153,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a6e874e9",
    "metadata": {},
    "outputs": [
@@ -269,7 +289,11 @@
       "\n",
       "['Super Area' 'Carpet Area' 'Built Area']\n",
       "\n",
-      "['Bachelors/Family' 'Bachelors' 'Family']\n"
+      "['Bachelors/Family' 'Bachelors' 'Family']\n",
+      "\n",
+      "['Kolkata' 'Mumbai' 'Bangalore' 'Delhi' 'Chennai' 'Hyderabad']\n",
+      "\n",
+      "['Contact Owner' 'Contact Agent' 'Contact Builder']\n"
      ]
     }
    ],
@@ -286,6 +310,14 @@
     "print()\n",
     "print(df['Point of Contact'].unique())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e01fecd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
